--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/bootstrap-icons/bootstrap-icons.css" />
-    <link rel="stylesheet" href="css/_index.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title></title>
 </head>
 <body>
